--- a/Sample/NewPage1.xaml
+++ b/Sample/NewPage1.xaml
@@ -2,10 +2,12 @@
 <ContentPage x:Class="Sample.NewPage1"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:control="clr-namespace:Sample"
              Title="NewPage1">
     <VerticalStackLayout>
         <Label HorizontalOptions="Center"
                Text="Welcome to .NET MAUI!"
                VerticalOptions="Center" />
+
     </VerticalStackLayout>
 </ContentPage>
