--- a/Sample/NewContent1.xaml
+++ b/Sample/NewContent1.xaml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView x:Class="Sample.NewContent1"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:mpk="clr-namespace:MPowerKit.Regions;assembly=MPowerKit.Regions">
     <VerticalStackLayout>
         <Label HorizontalOptions="Center"
                Text="Welcome to .NET MAUI!"
                VerticalOptions="Center" />
+        <ContentView mpk:RegionManager.RegionName="NewRegion" />
     </VerticalStackLayout>
 </ContentView>
